--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </div>
         <div id="nav-right">
             <!-- <a href="index.html">Naslovna</a> -->
-            <a href="#" id="pretraga">Pretraga filmova</a>
-            <a href="#" id="dodavanje">Dodaj film</a>
+            <a href="pretraga.html" id="pretraga">Pretraga filmova</a>
+            <a href="dodajfilm.html" id="dodavanje">Dodaj film</a>
         </div>
     </nav>
 
