--- a/pretraga.html
+++ b/pretraga.html
@@ -8,6 +8,17 @@
     <title>Pretraga</title>
 </head>
 <body>
+        <nav class="header">
+                <div id="nav-left">
+                    <img src="movie.png" alt="movie" id="logo">
+                    <div>Baza Filmova</div>
+                </div>
+                <div id="nav-right">
+                    <!-- <a href="index.html">Naslovna</a> -->
+                    <a href="pretraga.html" id="pretraga">Pretraga filmova</a>
+                    <a href="dodajfilm.html" id="dodavanje">Dodaj film</a>
+                </div>
+            </nav>
 
 <div id="grid-container">
 <select name="nGodina" id="iGodina">
