--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
 
     </footer>
     <script src="app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
 </body>
 </html>
