--- a/pretraga.html
+++ b/pretraga.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-    <nav class="header">
+
+
+    <div class="header">
+ <nav class="header">
         <div id="nav-left">
             <img src="movie.png" alt="movie" id="logo">
             <div>Baza Filmova</div>
@@ -22,7 +25,10 @@
         </div>
     </nav>
 
-    <div id="grid-container">
+    </div>
+   
+
+    <div class="main">
 
         <button id="iNajstariji">Pocev od najstarijeg</button>
         <button id="iNajmladji"> Pocev od najmladjeg</button>
@@ -31,14 +37,22 @@
         <br>
         <br>
         <br>
-        <input type="text" placeholder="Pronadji film" id="iPronadjiFilm">
+        <input type="text" placeholder="Pronadji film" id="iPronadjiFilm"><br><br>
         <div id="iLoader"></div>
-        <div id="iPrikazFilmova"></div>
+        <div id="iPrikazFilmova">
+
+
+
+        </div>
+
+
 
 
 
 
     </div>
+
+    <div class="footer"></div>
 
 
 
